--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+    <div id="calculator">
+      <div id="display">hi</div>
+      <div class="row" id="row1">
+        <button>AC</button>
+        <button>+/-</button>
+        <button>%</button>
+        <button>/</button>
+      </div>
+      <div class="row" id="row2">
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>*</button>
+      </div>
+      <div class="row" id="row3">
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>-</button>
+      </div>
+      <div class="row" id="row4">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>+</button>
+      </div>
+      <div class="row" id="row5">
+        <button class="doubleWidth">0</button>
+        <button>.</button>
+        <button>=</button>
+      </div>
+    </div>
   </body>
 </html>
