--- a/index.html
+++ b/index.html
@@ -8,35 +8,37 @@
   </head>
   <body>
     <div id="calculator">
-      <div id="display">hi</div>
+      <div id="display">
+        <div id="displayContent">1234567890</div>
+      </div>
       <div class="row" id="row1">
-        <button>AC</button>
-        <button>+/-</button>
-        <button>%</button>
-        <button>/</button>
+        <button id="AC">AC</button>
+        <button id="+/-">+/-</button>
+        <button id="%">%</button>
+        <button id="/">/</button>
       </div>
       <div class="row" id="row2">
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>*</button>
+        <button id="7">7</button>
+        <button id="8">8</button>
+        <button id="9">9</button>
+        <button id="*">*</button>
       </div>
       <div class="row" id="row3">
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>-</button>
+        <button id="4">4</button>
+        <button id="5">5</button>
+        <button id="6">6</button>
+        <button id="-">-</button>
       </div>
       <div class="row" id="row4">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>
+        <button id="1">1</button>
+        <button id="2">2</button>
+        <button id="3">3</button>
+        <button id="+">+</button>
       </div>
       <div class="row" id="row5">
         <button class="doubleWidth">0</button>
-        <button>.</button>
-        <button>=</button>
+        <button id=".">.</button>
+        <button id="=">=</button>
       </div>
     </div>
   </body>
