Wire up some logic

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         <button id="AC">AC</button>
         <button id="+/-">+/-</button>
         <button id="%">%</button>
-        <button id="/">/</button>
+        <button class="binaryOperator" id="/">/</button>
       </div>
       <div class="row" id="row2">
         <button id="7">7</button>
         <button id="8">8</button>
         <button id="9">9</button>
-        <button id="*">*</button>
+        <button class="binaryOperator" id="*">*</button>
       </div>
       <div class="row" id="row3">
         <button id="4">4</button>
         <button id="5">5</button>
         <button id="6">6</button>
-        <button id="-">-</button>
+        <button class="binaryOperator" id="-">-</button>
       </div>
       <div class="row" id="row4">
         <button id="1">1</button>
         <button id="2">2</button>
         <button id="3">3</button>
-        <button id="+">+</button>
+        <button class="binaryOperator" id="+">+</button>
       </div>
       <div class="row" id="row5">
         <button class="doubleWidth">0</button>
