--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="calculator">
       <div id="display">
-        <div id="displayContent">1234567890</div>
+        <div id="displayContent">0</div>
       </div>
       <div class="row" id="row1">
         <button id="AC">AC</button>
