--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
       </div>
       <div class="row" id="row1">
         <button id="AC">AC</button>
-        <button id="+/-">+/-</button>
-        <button id="%">%</button>
+        <button id="negative">+/-</button>
+        <button id="percent">%</button>
         <button class="binaryOperator" id="/">/</button>
       </div>
       <div class="row" id="row2">
-        <button id="7">7</button>
-        <button id="8">8</button>
-        <button id="9">9</button>
+        <button class="number" id="7">7</button>
+        <button class="number" id="8">8</button>
+        <button class="number" id="9">9</button>
         <button class="binaryOperator" id="*">*</button>
       </div>
       <div class="row" id="row3">
-        <button id="4">4</button>
-        <button id="5">5</button>
-        <button id="6">6</button>
+        <button class="number" id="4">4</button>
+        <button class="number" id="5">5</button>
+        <button class="number" id="6">6</button>
         <button class="binaryOperator" id="-">-</button>
       </div>
       <div class="row" id="row4">
-        <button id="1">1</button>
-        <button id="2">2</button>
-        <button id="3">3</button>
+        <button class="number" id="1">1</button>
+        <button class="number" id="2">2</button>
+        <button class="number" id="3">3</button>
         <button class="binaryOperator" id="+">+</button>
       </div>
       <div class="row" id="row5">
-        <button class="doubleWidth">0</button>
-        <button id=".">.</button>
-        <button id="=">=</button>
+        <button class="number doubleWidth">0</button>
+        <button id="decimal">.</button>
+        <button id="equals">=</button>
       </div>
     </div>
   </body>
