--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
         <div id="displayContent">0</div>
       </div>
       <div class="row" id="row1">
-        <button id="AC">AC</button>
-        <button id="negative">+/-</button>
-        <button id="percent">%</button>
-        <button class="binaryOperator" id="/">/</button>
+        <button class="clear">AC</button>
+        <button class="negative">+/-</button>
+        <button class="percent">%</button>
+        <button class="divide binaryOperator">/</button>
       </div>
       <div class="row" id="row2">
-        <button class="number" id="7">7</button>
-        <button class="number" id="8">8</button>
-        <button class="number" id="9">9</button>
-        <button class="binaryOperator" id="*">*</button>
+        <button class="data" id="7">7</button>
+        <button class="data" id="8">8</button>
+        <button class="data" id="9">9</button>
+        <button class="multiply binaryOperator">*</button>
       </div>
       <div class="row" id="row3">
-        <button class="number" id="4">4</button>
-        <button class="number" id="5">5</button>
-        <button class="number" id="6">6</button>
-        <button class="binaryOperator" id="-">-</button>
+        <button class="data" id="4">4</button>
+        <button class="data" id="5">5</button>
+        <button class="data" id="6">6</button>
+        <button class="subtract binaryOperator">-</button>
       </div>
       <div class="row" id="row4">
-        <button class="number" id="1">1</button>
-        <button class="number" id="2">2</button>
-        <button class="number" id="3">3</button>
-        <button class="binaryOperator" id="+">+</button>
+        <button class="data" id="1">1</button>
+        <button class="data" id="2">2</button>
+        <button class="data" id="3">3</button>
+        <button class="add binaryOperator">+</button>
       </div>
       <div class="row" id="row5">
-        <button class="number doubleWidth">0</button>
-        <button id="decimal">.</button>
-        <button id="equals">=</button>
+        <button class="data doubleWidth">0</button>
+        <button class="data">.</button>
+        <button class="equals">=</button>
       </div>
     </div>
   </body>
