--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="row" id="row1">
         <button class="clear">AC</button>
-        <button class="negative">+/-</button>
+        <button class="delete">D</button>
         <button class="percent">%</button>
         <button class="divide binaryOperator">/</button>
       </div>
